--- a/frontend/index.html
+++ b/frontend/index.html
@@ -138,7 +138,7 @@
                 // 2. Make the API call to your backend server
                 // IMPORTANT: In the final deployment, you will replace 'http://localhost:3001'
                 // with your live backend URL from Render.
-                const response = await fetch(`https://dealor.netlify.app/api/search?product=${encodeURIComponent(query)}`);
+                const response = await fetch(`https://https://68e5b28e5550b500081a5292--dealor.netlify.app/api/search?product=${encodeURIComponent(query)}`);
 
                 if (!response.ok) {
                     throw new Error(`HTTP error! status: ${response.status}`);
